--- a/index.html
+++ b/index.html
@@ -1,141 +1,278 @@
-<!--Samuel Switzer 2020-->
 <!DOCTYPE html>
-<html>
+
+<!--
+Template credit:
+http://www.tooplate.com/view/2087-kalay
+-->
+
+<html lang="en">
 <head>
-	<title>la-li-lu-le-lo</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="My Dev Portfolio">
-	<meta name="keywords" content="HTML, CSS, C++, C#, Portfolio, Development, Game">
-	<meta name="author" content="Samuel Switzer">
-	<link rel="stylesheet" href="style.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-	<link rel="manifest" href="images/favicon/site.webmanifest">
-	<style type="text/css">
-	.photo {
-	width: 200px;
-	padding: 10px;
-	border: 1px solid #c9c9c9;
-	}
-	.gitlogo {
-	    color: #fff;
-			fill: currentColor;
-	}
-	#pagetitle {
-		color: #c9c9c9;
-		font: Arial, sans-serif;
-		font-size: 40px;
-		padding-left: 35px;	
-	}
-	</style>
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="description" content="">
+<meta name="keywords" content="">
+<meta name="author" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<title>Sam Switzer - Dev Portfolio</title>
+
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/magnific-popup.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+<!-- MAIN CSS -->
+<link rel="stylesheet" href="css/tooplate-style.css">
+
 </head>
 <body>
-	<a style="text-decoration:none;" href="index.html">
-		<h1 id="pagetitle" align="left">Sam Switzer</h1>
-	</a>
-	<h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
-	<hr>
 
-	<!--Menu-->
-	<div class="menu">
-	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
-		<tr align="center">
-			<td width="20%" bgcolor="#3D4E54">
-					<a style="text-decoration:none;" href="index.html"><p>Home</p></a>
-			</td>
-			<td width="20%" bgcolor="#3D4E54">
-					<a style="text-decoration:none;" href="current.html"><p>Current Projects</p></a>
-			</td>
-			<td width="20%" bgcolor="#3D4E54">
-					<a style="text-decoration:none;" href="finished.html"><p>Finished Projects</p></a>
-			</td>
-			<td width="20%" bgcolor="#3D4E54">
-					<a style="text-decoration:none;" href="artwork.html"><p>Artwork</p></a>
-			</td>
-			<td width="20%" bgcolor="#3D4E54">
-					<a style="text-decoration:none;" href="contact.html"><p>Contact</p></a>
-			</td>
-		</tr>
-	</table>
+<!-- PRE LOADER -->
+<div class="preloader">
+     <div class="spinner">
+          <span class="spinner-rotate"></span>
+     </div>
 </div>
 
-	<!--Content-->
-	<div class="content">
-	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
-		<tr>
-			<td>
-			<p align="center">
-				SITE IS CURRENTLY UNDER CONSTRUCTION, CHECK BACK LATER!
-			</p>
-			<br>
 
-			<img align="left" style="margin:20px;" src="images/content/me.jpg" class="photo">
+<!-- HOME SECTION -->
+<section id="home" class="parallax-section">
+     <div class="container">
+          <div class="row">
 
-			<table align="right" style="width:250px;margin:20px;">
-				<tr>
-					<th>
-						<h3>Skills</h3>
-						<ul align="left" style="margin-right:1px;">
-							<li> UI & UX Design
-							<li> Photoshop
-							<li> Web Development
-						</ul>
-					</th>
-				</tr>
-			</table>
+               <div class="col-md-offset-5 col-md-7 col-sm-12">
+                    <div class="home-thumb">
+                         <h1 class="wow fadeInUp" data-wow-delay="0.4s">Hi, I'm Sam.</h1>
+                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">3D Modeling & Game Design</p>
+                         <a href="#work" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">tell me more</a>
+                    </div>
+               </div>
 
-			<p align="left" style="margin:20px;">
-				Hi there, I'm Sam.
-				<br>
-				Game Dev Student @ SLC, Game collector, Design & Tech enthusiast
-				<br>
-				<br>
-				Phasellus auctor magna justo, quis fringilla elit pulvinar vitae. Donec semper lacus dui, vitae ornare tortor pharetra vitae. Praesent volutpat ornare ligula, ut laoreet velit elementum ac. Mauris nulla lorem, suscipit quis nisi quis, elementum auctor risus. Fusce convallis ante mi. Donec euismod enim eget metus ultricies imperdiet. Phasellus tincidunt ex a odio vestibulum, ac auctor ipsum pharetra. Curabitur ultricies libero quis quam ultrices, sed vestibulum felis fringilla. Ut suscipit mauris turpis, nec viverra purus vulputate et. Vivamus consequat arcu at neque porttitor, quis semper ligula condimentum. Nam commodo lorem a diam fringilla, et placerat nisi vestibulum. Maecenas ornare tincidunt euismod. Ut in lorem pulvinar, convallis orci non, porta orci.
-				<br>
-				<br>
-				Sed hendrerit dictum euismod. Nunc fringilla dui in purus venenatis condimentum. Donec eu libero dui. Aliquam tristique elementum sodales. Duis convallis bibendum molestie. Donec elementum porta nulla, vitae facilisis velit interdum ut. Morbi ipsum purus, lobortis vitae sapien quis, bibendum consectetur libero. Vivamus non vulputate tellus, at feugiat augue. Sed hendrerit et odio accumsan pretium. Quisque pellentesque posuere ligula vitae aliquam. Ut in turpis ornare, finibus nibh non, ullamcorper dui. Cras nisi massa, rutrum vel faucibus et, molestie non magna.
-			</p>
-			<br>
-			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right" style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
-			<br>
-			<br>
-				<blockquote cite="https://en.wikiquote.org/wiki/Metal_Gear">
-				"...can you hear me? Solid Snake... I'm not dead... Someday, I'll get even with you. Someday... we will meet again!"
-				</blockquote>
-			<br>
-			<br>
-		</td>
-		</tr>
-	</table>
-</div>
-	<!--Nav Jump-->
-	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; padding:10px; margin-top:10px;" href="#top">&#8679;</a>
+          </div>
+     </div>
+</section>
 
-	<hr>
-	<!--Bottom bar-->
-	<div class="bottom">
-	<a id="bottom"></a>
-	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;">
-		<tbody>
-			<tr>
-				<td align="center" width="10%">
-					<a href="https://github.io/">
-						<img height="50px" src="images/gitpages.png"/>
-					</a>
-				</td>
-				<td align="center" width="10%">
-					<a class="gitlogo" href="https://github.com/SamSwitzer" aria-label="Homepage" >
-	      <svg height="48" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="48" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
-	    </a>
-				</td>
-				<td align="right" style="padding-right:20px;">
-					<p>Samuel Switzer - 2020</p>
-				</td>
-	</tr>
-	</tbody>
-	</table>
-</div>
+
+<!-- WORK SECTION -->
+<section id="work" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-12 col-sm-12">
+                    <!-- SECTION TITLE -->
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                         <h2>Recent Work</h2>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image1.jpg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">First Title</h4>
+                                   <h2>Graphic Design</h2>
+                              </div>
+                              <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image2.jpg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Title Two</h4>
+                                   <h2>Photography</h2>
+                              </div>
+                              <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image3.jpg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Third Title</h4>
+                                   <h2>illustration</h2>
+                              </div>
+                              <img src="images/work-image3.png" class="img-responsive" alt="Work 3">
+                         </a>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+
+<!-- SERVICE SECTION -->
+<section id="service" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                    <!-- SECTION TITLE -->
+                    <h2>Skills</h2>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p> -->
+               </div>
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="service-thumb">
+                         <i class="fa fa-smile-o"></i>
+                         <h4>Graphic Design</h4>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing morbi venenatis.</p>
+                    </div>
+               </div>
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="service-thumb">
+                         <i class="fa fa-camera"></i>
+                         <h4>Photography</h4>
+                         <p>Duis sed arcu sed nunc maximus tempor. Maecenas et enim laoreet, pharetra risus vel.</p>
+                    </div>
+               </div>
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="service-thumb">
+                         <i class="fa fa-lightbulb-o"></i>
+                         <h4>UI/UX design</h4>
+                         <p>Sed tristique, nunc sit amet pellentesque pharetra, sapien urna.</p>
+                    </div>
+               </div>
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="service-thumb">
+                         <i class="fa fa-clone"></i>
+                         <h4>illustration</h4>
+                         <p>Cras ut urna quis nisi luctus molestie tincidunt sed ipsum. Donec gravida laoreet erat.</p>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+<!-- ABOUT SECTION -->
+<section id="about" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-4 col-sm-8">
+                    <div class="about-image-thumb">
+                         <img src="images/profile-image.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image">
+                         <ul class="social-icon">
+                              <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
+                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
+                            <!--  <li><a href="#" class="fa fa-instagram"></a></li> -->
+                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
+                         </ul>
+                    </div>
+               </div>
+
+               <div class="col-md-8 col-sm-12">
+                    <div class="about-thumb">
+                         <!-- SECTION TITLE -->
+                         <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
+                              <h2>More about me</h2>
+                              <p>Graphic Designer, Creative Photographer & Front-end Developer</p>
+                         </div>
+                         <div class="wow fadeInUp" data-wow-delay="0.8s">
+                              <p>Game Dev Student @ SLC, Game collector, Design & Tech enthusiast</p>
+                         </div>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+<!-- CONTACT SECTION -->
+<section id="contact" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-12 col-sm-12">
+                    <!-- SECTION TITLE -->
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                         <h2>Get in touch</h2>
+                    </div>
+               </div>
+
+               <div class="col-md-7 col-sm-10">
+                    <!-- CONTACT FORM HERE -->
+                    <div class="wow fadeInUp" data-wow-delay="0.4s">
+                        <form id="contact-form" action="#" method="get">
+                              <div class="col-md-6 col-sm-6">
+                                   <input type="text" class="form-control" name="name" placeholder="Name" required="">
+                              </div>
+                              <div class="col-md-6 col-sm-6">
+                                   <input type="email" class="form-control" name="email" placeholder="Email" required="">
+                              </div>
+                              <div class="col-md-12 col-sm-12">
+                                   <textarea class="form-control" rows="5" name="message" placeholder="Message" required=""></textarea>
+                              </div>
+                              <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
+                                   <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
+                              </div>
+                        </form>
+                    </div>
+               </div>
+
+               <div class="col-md-5 col-sm-8">
+                    <!-- CONTACT INFO -->
+                    <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
+                         <div class="section-title">
+                              <h2>Contact Info</h2>
+                         </div>
+
+                         <p><i class="fa fa-map-marker"></i> Cornwall ON, Canada</p>
+                         <p><i class="fa fa-comment"></i> <a href="mailto:sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a></p>
+                         <p><i class="fa fa-discord"></i> Sam#6928</p>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+<!-- FOOTER SECTION -->
+<footer>
+    <div class="container">
+        <div class="row">
+
+               <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.8s">
+                    <p class="white-color">Copyright &copy; 2021 Samuel Switzer</p>
+                    <div class="wow fadeInUp" data-wow-delay="1s">
+                         <ul class="social-icon">
+                              <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
+                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
+                            <!-- <li><a href="#" class="fa fa-instagram"></a></li> -->
+                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
+
+                         </ul>
+                    </div>
+          </div>
+     </div>
+</footer>
+
+<!-- SCRIPTS -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.parallax.js"></script>
+<script src="js/smoothscroll.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/custom.js"></script>
 
 </body>
 </html>
