--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="home-thumb">
                          <h1 class="wow fadeInUp" data-wow-delay="0.4s">Hi, I'm Sam.</h1>
                          <p class="wow fadeInUp white-color" data-wow-delay="0.6s">Artist & Developer</p>
-                         <a href="#work" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">tell me more</a>
+                         <a href="#tellmemore" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">tell me more</a>
                     </div>
                </div>
 
@@ -60,6 +60,25 @@ http://www.tooplate.com/view/2087-kalay
      </div>
 </section>
 
+<!-- ABOUT SECTION -->
+<section id="tellmemore" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-8 col-sm-12">
+                    <div class="about-thumb">
+                         <!-- SECTION TITLE -->
+                         <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
+                              <h2>Tell Me More</h2>
+                              <p>My name is Sam. Soon to graduate from the Game Development Program in St. Lawrence College, I aspire to work in UI/UX for those looking to refine, refresh, or create. With years of hands-on experience, I’m always looking to add my artistic ideas or learn a new approach.
+                              	<a href="#about">Want to learn more?</a></p>
+                         </div>
+                    </div>
+               </div>
+              
+          </div>
+     </div>
+</section>
 
 <!-- WORK SECTION -->
 <section id="work" class="parallax-section">
@@ -78,8 +97,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image4.5.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Java / Photoshop</h4>
-                                   <h2>Sam's Aerial Fishing</h2>
+                                   <h2>Sam's Aerial Fishing</h2><h4 class="white-color">Java / Photoshop</h4></br></br></br></br>
+                                   <h4>Gains hunter and fishing xp with the "aerial fishing" method.<h4>
                               </div>
                               <img src="images/work-image4.png" class="img-responsive" alt="Work 1">
                          </a>
@@ -91,8 +110,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image1.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Java / Photoshop</h4>
                                    <h2>Sam's Cannonball Master</h2>
+                                   <h4 class="white-color">Java / Photoshop</h4>
                               </div>
                               <img src="images/work-image1.5.png" class="img-responsive" alt="Work 1">
                          </a>
@@ -104,8 +123,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image5.gif" class="image-popup">
                               <div class="work-thumb-overlay">
+                                   <h2>Forum Logo</h2>
                                    <h4 class="white-color">Photoshop / Blender</h4>
-                                   <h2>Fourm Logo</h2>
                               </div>
                               <img src="images/work-image5.gif" class="fill" alt="Work 2">
                          </a>
@@ -123,8 +142,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image2.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Moi3D / 3ds Max / Print</h4>
                                    <h2>Halo Orb</h2>
+                                   <h4 class="white-color">Moi3D / 3ds Max / Print</h4>
                               </div>
                               <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
                          </a>
@@ -135,8 +154,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image3.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Photoshop</h4>
                                    <h2>Zinogre Sketch *Unfinished*</h2>
+                                   <h4 class="white-color">Photoshop</h4>
                               </div>
                               <img src="images/work-image3.png" class="img-responsive" alt="Work 3">
                          </a>
@@ -148,8 +167,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/coming-soon.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Placeholder</h4>
                                    <h2>Coming soon</h2>
+                                   <h4 class="white-color">Placeholder</h4>
                               </div>
                               <img src="images/coming-soon.png" class="img-responsive" alt="Work 2">
                          </a>
@@ -220,12 +239,13 @@ http://www.tooplate.com/view/2087-kalay
 
                <div class="col-md-4 col-sm-8">
                     <div class="about-image-thumb">
-                         <img src="images/profile-image.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image">
+                         <img src="images/profile-image.png" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image">
                          <div class="wow fadeInUp" data-wow-delay="1s">
                          <ul class="social-icon">
                               <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
+                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-linkedin"></a></li>
                             <!--  <li><a href="#" class="fa fa-instagram"></a></li> -->
 
                          </ul>
@@ -237,11 +257,10 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="about-thumb">
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
-                              <h2>More about me</h2>
-                              <p>Script developer for Dreambot, Game Dev Student @ SLC</p>
-                         </div>
-                         <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Passion for tech, games, and interesting things.</p>
+                              <h2>About the Artist</h2>
+                              <p>Art is something I have always appreciated. Growing up in the quieter Cornwall, Ontario, my parents surrounded me with different mediums and interests. At 24 now, I’ve found my passion in UI/UX design.</p> 
+<p>My name is Sam Switzer. I am an artist and developer. My art reminds others of what you would see in a concept artbook. When I’m not sketching flash sheets or using Adobe Suite, I am developing bot scripts or games for my friends to play. My inspirations include Yoji Shinkawa, Rockstar, Blizzard, and Source. My process is simply to find the passion behind what I’m working with, really focus in on my work, and continue to refine it for the rest of it’s life.
+You can read about what I’m currently working on <a href="updates.html">here</a>, or read in detail about my experience <a href="files/Resume_2_1_1.pdf">here</a>. </p>
                          </div>
                     </div>
                </div>
@@ -274,6 +293,7 @@ http://www.tooplate.com/view/2087-kalay
                               <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
+                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-linkedin"></a></li>
                             <!-- <li><a href="#" class="fa fa-instagram"></a></li> -->
 
 
